<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Enforcerlogin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enforcers_only"
        android:fontFamily="cursive"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textSize="45sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_view_reported_accidents_you_need_to_registered_login_here"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="35dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/username"
        android:layout_margin="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:gravity="center"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="password"
        android:textColor="#FFFFFF"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF"
        android:gravity="center"
        android:autofillHints="" />


    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:id="@+id/button"
        android:background="@drawable/rounded_button"
        android:onClick="checkLogin"/>

</LinearLayout>